# viss

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  VERSION  compare_outputs.sh  dev_quick_comp.sh  pull_frontend.sh  push_frontend.sh  stat_out.json  stat_out_circum_500.json  stat_out_condom_500.json  test_config1.txt
.github/workflows/: c-cpp.yml  release.yml
cmake/: FindGSL.cmake  VissMacros.cmake
intervention/: interventionconfig_1.txt  interventionconfig_15.txt
redis-plus-plus/: CMakeLists.txt
redis-plus-plus/cmake/: FindHiredis.cmake
redis-plus-plus/src/sw/redis++/: connection.h  utils.h
src/: CMakeLists.txt  http_server.cpp  version.h.in
src/lib/core/: personaleventlist.h
src/lib/mnrm/: gslrandomnumbergenerator.cpp
src/lib/util/: logfile.cpp  logfile.h  standalone_logtest.cpp
src/program/: CMakeLists.txt
src/program-common/: eventbirth.cpp  eventcircum.cpp  eventcircum.h  eventdebut.cpp  eventformation.cpp  eventhivtransmission.cpp  eventhivtransmission.h  eventmonitoring.cpp  eventperiodiclogging.cpp  interventioncircum.cpp  interventioncircum.h  interventioncondom.cpp  interventioncondom.h  logsystem.cpp  main.cpp  person.cpp  person.h  person_relations.cpp  person_relations.h  simpactpopulation.cpp
src/program-maxart/: CMakeLists.txt
src/tests/config/: cmake_install.cmake
src/tests/global/: cmake_install.cmake  simpactpopulation.cpp
src/tests/test1/: cmake_install.cmake  eventformation.cpp  simpactpopulation.cpp
src/tests/test_mort/: cmake_install.cmake
src/tests/unit/: CMakeLists.txt  test_base.cpp  test_binary.cpp  test_circum.cpp  test_compare_outputs.cpp  test_condom.cpp
src/tests/varia/: cmake_install.cmake
vrust/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  rust_epidemiology_simulation.md
vrust/examples/: bench.rs  single_region.rs  sur_seirs_from_pg.rs
vrust/src/: calibration.rs  lib.rs
vrust/src/io/: age_pyramid_pg.rs  contact.rs  contact_synth.rs  debug_log.rs  mod.rs  population.rs
vrust/src/math/: linalg.rs  mod.rs  ode.rs
vrust/src/model/: mod.rs  seirs.rs
vrust/tests/: seirs_debug_snapshot.rs
vrust/tests/snapshots/: seirs_debug_snapshot__seirs_debug_log_snapshot_small.snap
